@@ -11,11 +11,11 @@ import com.project.backend.domain.book.key.FavoriteId;
 import com.project.backend.domain.book.repository.BookRepository;
 import com.project.backend.domain.book.repository.FavoriteRepository;
 import com.project.backend.domain.book.vo.NaverBookVO;
-import com.project.backend.domain.member.dto.MemberDto;
 import com.project.backend.domain.member.entity.Member;
 import com.project.backend.domain.member.exception.MemberErrorCode;
 import com.project.backend.domain.member.exception.MemberException;
 import com.project.backend.domain.member.repository.MemberRepository;
+import com.project.backend.global.authority.CustomUserDetails;
 import com.project.backend.global.response.GenericResponse;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -27,6 +27,8 @@ import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
@@ -62,33 +64,29 @@ public class BookService {
      * -- 네이버api를 통해 검색어에 대한 도서데이터를 가져오는 메소드 --
      * 책은 한번에 30권 조회되도록 설정했다.
      * <p>
-     * 1. HttpHeader에 클라이언트ID와 비밀번호를 삽입한다
-     * 2. 요청 url에 검색어를 더해서 네이버에 요청할 url을 완성시킨다
-     * 3. HttpEntity를 이용하여 헤더값을 삽입한다.
-     * 4. RestTemplate에 만들어뒀던 HttpEntity를 넣어 네이버 api에게 GET요청한여 결과를 ResponseEntity<NaverBookVo>에 저장한다
-     * 5. ResponseEntity의 Body부분에는 검색결과가 담겨져있다 그 부분을 반환한다
      *
      * @param -- title (컨트롤러에서 입력한 검색어) --
-     * @return -- NaverBookVo --
+     * @return -- List<NaverBookVO.Item> --
      * @author -- 정재익 --
-     * @since -- 1월 25일 --
+     * @since -- 2월 3일 --
      */
-    private NaverBookVO BookDataFromApi(String title) {
+    private List<NaverBookVO.Item> BookDataFromNaverApi(String title) {
+        if (title == null || title.isEmpty()) {
+            throw new BookException(BookErrorCode.BOOK_NOT_FOUND);
+        }
+
         RestTemplate restTemplate = new RestTemplate();
         HttpHeaders headers = new HttpHeaders();
         headers.set("X-Naver-Client-Id", clientId);
         headers.set("X-Naver-Client-Secret", clientSecret);
 
         String url = apiUrl + "?query=" + title + "&display=30";
-
-        if (title == null || title.isEmpty()) {
-            throw new BookException(BookErrorCode.BOOK_NOT_FOUND);
-        }
-
         HttpEntity<String> entity = new HttpEntity<>(headers);
         ResponseEntity<NaverBookVO> response = restTemplate.exchange(url, HttpMethod.GET, entity, NaverBookVO.class);
 
-        return response.getBody();
+        return Optional.ofNullable(response.getBody())
+                .map(NaverBookVO::getItems)
+                .orElseThrow(() -> new BookException(BookErrorCode.BOOK_NOT_FOUND));
     }
 
     /**
@@ -97,37 +95,39 @@ public class BookService {
      * <p>
      * 1. 검색 결과를 BookDataFromApi에 전달
      * 2. 검색 결과를 DB에 저장
-     * 3. 검색 결과를 List<BookSimpleDto>로 변환하여 컨트롤러에 전달
+     * 3. DB에 저장된 값을 List<BookSimpleDto>로 변환하여 컨트롤러에 전달
      *
      * @param -- title (컨트롤러에서 입력한 검색어) --
      * @return -- List<BookSimpleDTO> --
      * @author -- 정재익 --
-     * @since -- 1월 31일 --
+     * @since -- 2월 3일 --
      */
     public List<BookSimpleDTO> searchTitleBooks(String title) {
-        NaverBookVO naverBookVo = BookDataFromApi(title);
+        List<NaverBookVO.Item> items = BookDataFromNaverApi(title);
+        List<Book> savedBooks = saveBooks(items);
 
-        if (naverBookVo != null && naverBookVo.getItems() != null) {
-            saveBooks(naverBookVo.getItems());
-        } else {
-            throw new BookException(BookErrorCode.BOOK_NOT_FOUND);
-        }
+        return savedBooks.stream()
+                .map(book -> modelMapper.map(book, BookSimpleDTO.class))
+                .toList();
 
-        return naverBookVo.getItems().stream().map(item -> modelMapper.map(item, BookSimpleDTO.class)).toList();
     }
 
     /**
      * -- 책 리스트를 DB에 저장하는 메소드 --
      * 책을 구분하는 고유값인 isbn데이터를 이용하여 이미 존재하는 책은 DB에 저장하지 않음
      *
-     * @param -- List<Book> books --
+     * @param -- ㅣist<NaverBookVO.Item> items --
+     * @return -- List<Book>
      * @author -- 정재익 --
-     * @since -- 1월 26일 --
+     * @since -- 2월 3일 --
      */
-    private void saveBooks(List<Book> books) {
-        List<Book> saveBooks = books.stream().filter(book -> !bookRepository.existsById(book.getId())).collect(Collectors.toList());
+    private List<Book> saveBooks(List<NaverBookVO.Item> items) {
+        List<Book> newBooks = items.stream()
+                .map(item -> modelMapper.map(item, Book.class))
+                .filter(book -> !bookRepository.existsByIsbn(book.getIsbn()))
+                .toList();
 
-        bookRepository.saveAll(saveBooks);
+        return bookRepository.saveAll(newBooks);
     }
 
     /**
@@ -142,11 +142,7 @@ public class BookService {
      */
     public List<BookSimpleDTO> searchAllBooks(String sortBy, String direction) {
         try {
-            Sort.Order order = direction.equalsIgnoreCase("desc")
-                    ? Sort.Order.desc(sortBy)
-                    : Sort.Order.asc(sortBy);
-            Sort sort = Sort.by(order);
-
+            Sort sort = Sort.by(direction.equalsIgnoreCase("desc") ? Sort.Order.desc(sortBy) : Sort.Order.asc(sortBy));
             List<Book> books = bookRepository.findAll(sort);
 
             if (books.isEmpty()) {
@@ -154,7 +150,6 @@ public class BookService {
             }
 
             return books.stream().map(book -> modelMapper.map(book, BookSimpleDTO.class)).toList();
-
         } catch (PropertyReferenceException e) {
             throw new BookException(BookErrorCode.INVALID_SORT_PROPERTY);
         }
@@ -163,12 +158,12 @@ public class BookService {
     /**
      * -- 책의 상세정보를 반환하는 메서드 --
      *
-     * @param -- id (책의 isbn) --
+     * @param -- id --
      * @return -- BookDto --
      * @author -- 정재익 --
-     * @since -- 1월 31일 --
+     * @since -- 2월 3일 --
      */
-    public BookDTO searchDetailsBook(String id) {
+    public BookDTO searchDetailsBook(Long id) {
         Optional<Book> book = bookRepository.findById(id);
 
         return book.map(b -> modelMapper.map(b, BookDTO.class)).orElseThrow(() -> new BookException(BookErrorCode.BOOK_NOT_FOUND));
@@ -181,17 +176,22 @@ public class BookService {
      * 책이 받은 찜한 수를 Book DB에 최신화
      *
      * @param -- favoriteDTO --
+     * @param -- userDetail --
      * @return --GenericResponse<String>--
      * @author -- 정재익 --
-     * @since -- 1월 31일 --
+     * @since -- 2월 3일 --
      */
     @Transactional
-    public GenericResponse<String> favoriteBook(FavoriteDTO favoriteDTO) {
-        FavoriteId favoriteId = new FavoriteId(favoriteDTO.getMemberId(), favoriteDTO.getBookId());
+    public GenericResponse<String> favoriteBook(FavoriteDTO favoriteDTO, @AuthenticationPrincipal UserDetails userDetails) {
+        CustomUserDetails customUserDetails = (CustomUserDetails) userDetails;
+        Long memberId = customUserDetails.getId();
+
+        FavoriteId favoriteId = new FavoriteId(userDetails.getUsername(), favoriteDTO.getBookId());
 
         Book book = bookRepository.findById(favoriteDTO.getBookId())
                 .orElseThrow(() -> new BookException(BookErrorCode.BOOK_NOT_FOUND));
-        Member member = memberRepository.findById(favoriteDTO.getMemberId())
+
+        Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new MemberException(MemberErrorCode.NON_EXISTING_ID));
 
         if (favoriteRepository.existsById(favoriteId)) {
@@ -214,23 +214,25 @@ public class BookService {
 
     /**
      * -- 찜한 책 목록을 확인하는 메소드 --
-     * 1. memberDto를 받아와서 memberId를 추출
+     * 1. 현재 접속 정보를 바탕으로 멤버ID 추출
      * 2. favoriteRepository에서 해당 멤버가 찜한 책 목록을 반환받는다
      * 3. favorite 리스트를 BookSimpleDto로 변환한 뒤 반환한다.
      *
-     * @param -- MemberDTO  --
+     * @param -- userDetail --
      * @return -- List<BookSimpleDTO> --
      * @author -- 정재익 --
-     * @since -- 1월 27일 --
+     * @since -- 2월 3일 --
      */
-    public List<BookSimpleDTO> searchFavoriteBooks(MemberDto memberDto) {
-        String memberId = memberDto.getId();
+    public List<BookSimpleDTO> searchFavoriteBooks(@AuthenticationPrincipal UserDetails userDetails) {
+        CustomUserDetails customUserDetails = (CustomUserDetails) userDetails;
+        Long memberId = customUserDetails.getId();
+        String memberUsername = userDetails.getUsername();
 
         if (!memberRepository.existsById(memberId)) {
             throw new MemberException(MemberErrorCode.NON_EXISTING_ID);
         }
 
-        List<Favorite> favorites = favoriteRepository.findByIdMemberId(memberId);
+        List<Favorite> favorites = favoriteRepository.findById_MemberUsername(memberUsername);
 
         if (favorites.isEmpty()) {
             throw new BookException(BookErrorCode.NO_FAVORITE_BOOKS);
